[metadata]
name = quickllm
version = 0.0.1
author = safevideo
author_email = support@safevideo.ai
description = Base Package for Large Language Model Applications
long_description = file: README.md
long_description_content_type = text/markdown
license = APGL-3.0


[options]
include_package_data = True
packages = find: