[metadata]
license_files = LICENSE
description_file = README.md

[flake8]
max-line-length = 110
exclude = .tox,*.egg,build,temp,.git,.vscode
select = E,W,F
doctests = True
verbose = 2
# https://pep8.readthedocs.io/en/latest/intro.html#error-codes
format = pylint
# see: https://www.flake8rules.com/
ignore = E731,F405,E402,W504,E501
    # E731: Do not assign a lambda expression, use a def
    # F405: name may be undefined, or defined from star imports: module
    # E402: module level import not at top of file
    # W504: line break after binary operator
    # E501: line too long
    # removed:
    # F401: module imported but unused
    # E231: missing whitespace after ‘,’, ‘;’, or ‘:’
    # E127: continuation line over-indented for visual indent
    # F403: ‘from module import *’ used; unable to detect undefined names


[isort]
# https://pycqa.github.io/isort/docs/configuration/options.html
line_length = 110
# see: https://pycqa.github.io/isort/docs/configuration/multi_line_output_modes.html
multi_line_output = 0